--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,25 @@
   color: #61dafb;
 }
 
+.t {
+  height: 20;
+  width: 20;
+  border-style: solid;
+  border-width: thin;
+  border-color: #318bfe;
+  background-color: #318bfe;
+  border-radius: 50%;
+  content: '\2713';
+  display: inline-block;
+  color: white;
+  padding: 0 5px 0 5px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
